# LRview

./: CMakeLists.txt
include/: Camera.h  Rect.h
src/: Camera.cpp  Rect.cpp  ViewLR.cpp
